# servo-connector-templates

./: .gitignore  Dockerfile  Makefile  README.md  cookiecutter.json  pyproject.toml
.github/workflows/: docker.yaml  dockerhub-description.yml
assembly/: README.md  cookiecutter.json
assembly/hooks/: post_gen_project.py
assembly/{{cookiecutter.assembly_name}}/: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
assembly/{{cookiecutter.assembly_name}}/.github/workflows/: docker.yaml  release.yml
connector/: README.md
connector/hooks/: post_gen_project.py
connector/{{cookiecutter.connector_name}}/: README.md  pyproject.toml  test_{{cookiecutter.module_name}}.py
connector/{{cookiecutter.connector_name}}/.github/workflows/: test.yaml
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.connector_name}}/: .gitignore  CHANGELOG.md  {{cookiecutter.module_name}}.py
{{cookiecutter.connector_name}}/.github/workflows/: release-drafter.yml  release.yml
