[tool.poetry]
name = "servo-connector-templates"
version = "0.1.0"
description = "Templates for generating Servo Connector projects"
authors = ["Blake Watters <blake@opsani.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
cookiecutter = "^1.7.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
