[tool.poetry]
name = "{{cookiecutter.assembly_name}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.description}}"
authors = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>"]
license = "{{cookiecutter.license}}"
readme = "README.md"
homepage = "{{cookiecutter.homepage}}"
repository = "{{cookiecutter.repository}}"

[tool.poetry.dependencies]
python = "^3.8"
servox = "^0.5.1"
{%- if cookiecutter.dotenv|lower == "y" %}
python-dotenv = "^0.14.0"
{%- endif %}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
