[tool.poetry]
name = "{{cookiecutter.connector_name}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.description}}"
authors = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>"]
license = "{{cookiecutter.license}}"
readme = "README.md"
homepage = "{{cookiecutter.homepage}}"
repository = "{{cookiecutter.repository}}"

[tool.poetry.dependencies]
python = "^3.8"
servox = "^0.5.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
pytest-asyncio = "^0.14.0"
asynctest = {git = "https://github.com/Martiusweb/asynctest.git", rev = "py3.8"}

[tool.poetry.plugins."servo.connectors"]
{%- set class_prefix = cookiecutter.module_name|replace('_', ' ')|title|replace(' ', '') %}
{%- set connector_class_name = class_prefix + 'Connector' %}
"{{ cookiecutter.connector_name }}" = "{{ cookiecutter.module_name }}:{{ connector_class_name }}"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
